fixed links behind sticky header again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-padding-top: 80px; /* height of sticky header */
+}
+
 :root {
   --main-text-color: lightseagreen;
   --light-text-color: floralwhite;
@@ -29,7 +33,7 @@ h3 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-section::before {
+h2::before {
   display: block;
   content: " ";
   margin-top: -80px;
@@ -297,7 +301,7 @@ header nav ul li a {
 .contact-info ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   list-style: none;
 }
